Import of RGE/Keyword-API-0.0002 from CPAN.
gitpan-cpan-distribution: Keyword-API
gitpan-cpan-version:      0.0002
gitpan-cpan-path:         RGE/Keyword-API-0.0002.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,5 +19,6 @@ requires:
   perl: 5.012
 resources:
   bugtracker: https://github.com/robinedwards/Keyword-API/issues
+  homepage: http://search.cpan.org/dist/Keyword-API/
   repository: git://github.com/robinedwards/Keyword-API.git
-version: 0.0001
+version: 0.0002
